# sn-mcp-server

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  README.md  SECURITY.md  docker-compose.yml  f.pre-commit-config.yaml  glama.json  pyproject.toml  pytest.ini  run_tests.py  v1.0.1-tools.json
.claude/: settings.json  settings.local.json
.claude/hooks/: session-start.sh
.claude/skills/git-commit/: SKILL.md
.claude/skills/sn-architecture/: SKILL.md
.claude/skills/sn-implementation/: SKILL.md
.claude/skills/sn-planning/: SKILL.md
.claude/skills/sn-spec-writing/: SKILL.md
.github/: copilot-instructions.md
.github/agents/: architect.agent.md  coder.agent.md  planner.agent.md  tester.agent.md
.github/skills/git-commit/: SKILL.md
.github/skills/sn-implementation/: SKILL.md
.github/skills/sn-testing/: SKILL.md
.github/workflows/: ci.yml  release-pypi.yml  release-testpypi.yml
.plans/: Plan-Pagination-List-Endpoints.md  Plan-SN-30607-signer-authentication.md  Plan-SN-30630-Skills-Tool.md
.specs/: Spec-Pagination-List-Endpoints.md  Spec-SN-30607-signer-authentication.md  Spec-SN-30630-Skills-Tool.md
adversarial-reviews/spec-sn-30530/: iter1_3_gemini_meta_review.md
docs/: v1.0.1-tool-contracts.md
eval/: README.md  cli.py  invariants.py  report.py  runner.py  simulators.py  types.py
eval-reports/: report.json  report.md
eval-reports/transcripts/: two-agent-flow-anthropic-trial1.md  two-agent-flow-anthropic-trial2.md  two-agent-flow-anthropic-trial3.md  two-agent-flow-anthropic-trial4.md  two-agent-flow-anthropic-trial5.md  two-agent-flow-anthropic-trial6.md  two-agent-flow-anthropic-trial7.md  two-agent-flow-anthropic-trial8.md  two-agent-flow-anthropic-trial9.md
eval/drivers/: anthropic.py  mock.py  openai.py  shared.py
eval/scenarios/: full_flow.py  two_agent_flow.py
examples/langchain/: langchain_example.py
examples/llamaindex/: llamaindex_example.py
examples/smolagents/: stdio_demo.py
scripts/: live_create_template_check.py
src/signnow_client/: __init__.py  client.py  client_base.py  client_document_groups.py  client_documents.py  client_other.py  config.py  exceptions.py  models.py  utils.py
src/signnow_client/models/: __init__.py  contacts.py  document_groups.py  folders_lite.py  other_models.py  templates_and_documents.py
src/sn_mcp_server/: __init__.py  _version.py  app.py  auth.py  bearer_auth_middleware.py  cli.py  config.py  server.py  token_provider.py
src/sn_mcp_server/skills/: signnow101.md
src/sn_mcp_server/tools/: __init__.py  cancel_invite.py  create_from_template.py  create_template.py  document.py  document_download_link.py  document_view.py  embedded_editor.py  embedded_invite.py  embedded_sending.py  invite_status.py  list_contacts.py  list_documents.py  list_templates.py  models.py  models_v1.py  reminder.py  rename_entity.py  send_invite.py  signing_link.py  signnow.py  signnow_v1.py  skills.py  update_invite_recipient.py  utils.py
src/sn_mcp_server/tools/static/: document_viewer.html  embedded_sender.html
tests/: README.md  conftest.py
tests/api/: conftest.py  test_cancel_invite.py  test_create_template.py  test_document_download_link.py  test_document_embedded_view.py  test_freeform_invite_status.py  test_send_document_copy_by_email.py  test_update_document_group_invite_step.py  test_upload_document.py
tests/api/fixtures/: error__document_group_not_found.json  error__email2_unverified_sender.json  error__invite_not_found.json  get_document_freeform_invites__success.json  get_field_invite__success.json  post_create_document_from_url__success.json  post_download_link__success.json  post_embedded_view__success.json  post_embedded_view_group__success.json  post_upload_document__success.json  put_cancel_document_field_invite__success.json
tests/e2e/: conftest.py  test_skills_tool.py  test_tool_selection.py
tests/integration/: conftest.py  test_create_template.py  test_document_download_link.py  test_embedded_sending.py  test_invite_status.py  test_send_invite.py  test_send_invite_reminder.py  test_upload_document.py  test_view_document.py
tests/integration/fixtures/: error__document_not_found.json  get_document__no_field_invites.json  get_document__with_pending_invite.json  get_document_group__with_roles.json  get_document_group_v2__freeform_invite.json  get_document_group_v2__with_pending_invite.json  get_user_info__success.json  post_create_document_from_url__success.json  post_download_link__success.json  post_embedded_sending__success.json  post_embedded_sending_group__success.json  post_embedded_view__success.json  post_embedded_view_group__success.json  post_upload_document__success.json
tests/unit/signnow_client/: test_client_other_contacts.py  test_document_field_json_attributes.py  test_invite_from_alias.py  test_oauth_and_folders.py  test_utils.py
tests/unit/sn_mcp_server/: test_cors_expose_headers.py  test_token_provider.py  test_tool_response_shapes.py  test_tool_versions.py
tests/unit/sn_mcp_server/tools/: test_cancel_invite.py  test_create_from_template.py  test_create_template.py  test_document.py  test_document_view.py  test_embedded_editor.py  test_embedded_invite.py  test_embedded_sending.py  test_expiration.py  test_folders_lite.py  test_invite_status.py  test_list_contacts.py  test_list_documents.py  test_list_templates.py  test_rename_entity.py  test_send_invite.py  test_send_invite_reminder.py  test_signing_link.py  test_signnow_parse_orders.py  test_signnow_v1.py  test_skills.py  test_update_invite_recipient.py  test_utils.py
